--- a/index.html
+++ b/index.html
@@ -2042,7 +2042,7 @@
         const loader = new GLTFLoader();
         
         loader.load(
-          BASE_URL + 'tree.glb',
+          BASE_URL + 'models/tree.glb',
           (gltf) => {
             this.treeModel = gltf.scene;
             
